--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 <body>
     <h1>歡迎使用 Git & Github </h1>
     
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque cupiditate deleniti tempore possimus minima officiis! Accusamus sint sequi, illo natus nisi, 
+        nemo blanditiis quae iste, quo a eligendi! Nisi, obcaecati.</p>
+
+    <p>中文也可以使用</p>
+
 </body>
 </html>
