--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 <body>
-    <h1>歡迎使用 Git & Github </h1>
+
+  <div class="container">
+
+ <h1>歡迎使用 Git & Github </h1>
     
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque cupiditate deleniti tempore possimus minima officiis! Accusamus sint sequi, illo natus nisi, 
         nemo blanditiis quae iste, quo a eligendi! Nisi, obcaecati.</p>
-
+   
 <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header">
@@ -50,6 +53,10 @@
     </div>
   </div>
 </div>
+
+  </div>
+
+
 
 
 
